# Aladdin-Protocol

./: Aladdin Core  Aladdin-Protocol-Gateway  CONTRIBUTING.md  CORE_LOGIC.md  Cargo.toml  LICENSE  Outreach_Log.md  README  README.md  S1_Target_Matrix.md  S2_Target_Matrix.md  architecture_logic.py  gateway_routing.py  network.rs  network_node_auth.py  neural_logic_pipeline.py
app/api/gateway/: route.ts
src/: crypto.cpp  main.rs
